@@ -72,10 +72,6 @@
   <workflow>dynamic_class_generation_interaction_workflow</workflow>
  </chain>
  <chain>
-  <type>Component Tool</type>
-  <workflow>dynamic_class_generation_interaction_workflow</workflow>
- </chain>
- <chain>
   <type>Content Existence Constraint</type>
   <workflow>dynamic_class_generation_interaction_workflow</workflow>
  </chain>
